# ChangeLog for media-libs/openexr
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/openexr/ChangeLog,v 1.100 2015/04/19 07:01:19 pacho Exp $

  19 Apr 2015; Pacho Ramos <pacho@gentoo.org> openexr-2.1.0.ebuild:
  x86 stable wrt bug #526054

  12 Feb 2015; Pacho Ramos <pacho@gentoo.org> openexr-2.1.0.ebuild:
  amd64 stable, bug #526054

  17 Dec 2014; Jeroen Roovers <jer@gentoo.org> openexr-2.1.0.ebuild:
  Stable for HPPA (bug #526054).

*openexr-2.2.0 (22 Aug 2014)

  22 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> +openexr-2.2.0.ebuild:
  Version bump.

  03 Aug 2014; Christoph Junghans <ottxor@gentoo.org> openexr-2.1.0.ebuild:
  added prefix support (bug #515454)

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> openexr-2.0.1-r1.ebuild,
  openexr-2.1.0.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

*openexr-2.1.0 (22 Jan 2014)

  22 Jan 2014; Samuli Suominen <ssuominen@gentoo.org> +openexr-2.1.0.ebuild:
  Version bump.

  22 Jan 2014; Samuli Suominen <ssuominen@gentoo.org> -openexr-2.0.0.ebuild,
  -openexr-2.0.1.ebuild:
  old

*openexr-2.0.1-r1 (11 Aug 2013)

  11 Aug 2013; Alexis Ballier <aballier@gentoo.org> +openexr-2.0.1-r1.ebuild:
  Convert to multilib. Do not dobin imfexamples, it actually installs a libtool
  wrapper so is sort of useless. Do not compress the examples.

  23 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> openexr-2.0.1.ebuild:
  Don't use ${PV} as subslot; use 2.0.1 instead since it's propably same for
  2.0.2.

*openexr-2.0.1 (23 Jul 2013)

  23 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> +openexr-2.0.1.ebuild:
  Version bump.

  12 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> openexr-2.0.0.ebuild:
  Use subslot 0/20 based on SONAME.

*openexr-2.0.0 (11 Mar 2013)

  11 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> +openexr-2.0.0.ebuild:
  Version bump.
