@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/openexr_ctl
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openexr_ctl/ChangeLog,v 1.30 2015/04/19 07:01:39 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openexr_ctl/ChangeLog,v 1.31 2015/04/21 19:19:04 pacho Exp $
+
+  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> openexr_ctl-1.0.1-r2.ebuild:
+  ppc stable wrt bug #526054
 
   19 Apr 2015; Pacho Ramos <pacho@gentoo.org> openexr_ctl-1.0.1-r2.ebuild:
   x86 stable wrt bug #526054
