@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/openexr
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openexr/ChangeLog,v 1.100 2015/04/19 07:01:19 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openexr/ChangeLog,v 1.101 2015/04/21 19:18:47 pacho Exp $
+
+  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> openexr-2.1.0.ebuild:
+  ppc stable wrt bug #526054
 
   19 Apr 2015; Pacho Ramos <pacho@gentoo.org> openexr-2.1.0.ebuild:
   x86 stable wrt bug #526054
